--- a/flume/pom.xml
+++ b/flume/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>es.tid.fiware.orionconnectors</groupId>
   <artifactId>cosmos-injector</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1</version>
   <packaging>jar</packaging>
 
   <name>cosmos-injector</name>
