--- a/resources/hive-basic-client/pom.xml
+++ b/resources/hive-basic-client/pom.xml
@@ -43,12 +43,21 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
         <configuration>
           <archive>
             <manifest>
               <mainClass>es.tid.fiware.cosmos.hivebasicclient.HiveBasicClient</mainClass>
             </manifest>
           </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <configuration>
+          <mainClass>es.tid.fiware.cosmos.hivebasicclient.HiveBasicClient</mainClass>
         </configuration>
       </plugin>
     </plugins>
