--- a/flume/pom.xml
+++ b/flume/pom.xml
@@ -3,8 +3,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>es.tid.fiware.orionconnectors</groupId>
-  <artifactId>cosmos-injector</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>cygnus</artifactId>
+  <version>0.1</version>
   <packaging>jar</packaging>
 
   <name>cosmos-injector</name>
