--- a/flume/pom.xml
+++ b/flume/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>es.tid.fiware.orionconnectors</groupId>
-  <artifactId>cosmos-injector</artifactId>
+  <artifactId>cygnus</artifactId>
   <version>0.1</version>
   <packaging>jar</packaging>
 
