--- a/flume/pom.xml
+++ b/flume/pom.xml
@@ -42,4 +42,24 @@
       <version>1.2.17</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <!-- Explicit Java version declaration in needed in some systems in which Maven seems not
+             being able to find itself the right version. Many systems don't need this declaration
+             but it doesn't use to hurt anyway -->
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.3.2</version>
+          <configuration>
+            <source>1.6</source>
+            <target>1.6</target>
+            <compilerArgument></compilerArgument>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
 </project>
