--- a/flume/pom.xml
+++ b/flume/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>es.tid.fiware.orionconnectors</groupId>
   <artifactId>cygnus</artifactId>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>cosmos-injector</name>
@@ -35,6 +35,11 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
