rpm created without postinstall

--- a/flume/neore/rpm/SOURCES/config/cygnus.conf
+++ b/flume/neore/rpm/SOURCES/config/cygnus.conf
@@ -22,7 +22,7 @@ orionagent.sinks.hdfs-sink.channel = notifications
 orionagent.sinks.hdfs-sink.type = es.tid.fiware.orionconnectors.cosmosinjector.OrionHDFSSink
 # IP address of the Cosmos deployment where the notification events will be persisted
 orionagent.sinks.hdfs-sink.cosmos_host = x.y.z.w
-# port of the Cosmos service listening for persistence operations; 14000 for httpfs, 50070 for webhdfs and free choice for inifinty
+# port of the Cosmos service listening for persistence operations; 14000 for httpfs, 50070 for webhdfs and free choice for infinity
 orionagent.sinks.hdfs-sink.cosmos_port = 14000
 # username allowed to write in HDFS (/user/myusername)
 orionagent.sinks.hdfs-sink.cosmos_username = myusername
