--- a/flume/neore/rpm/SOURCES/config/log4j.properties
+++ b/flume/neore/rpm/SOURCES/config/log4j.properties
@@ -24,7 +24,7 @@
 
 #flume.root.logger=DEBUG,console
 flume.root.logger=INFO,LOGFILE
-flume.log.dir=/tmp/apache-flume/
+flume.log.dir=/var/log/cygnus
 flume.log.file=flume.log
 
 log4j.logger.org.apache.flume.lifecycle = INFO
@@ -71,7 +71,7 @@ log4j.appender.console.layout.ConversionPattern=%d (%t) [%p - %l] %m%n
 log4j.appender.cosmosinjector5050=org.apache.log4j.RollingFileAppender
 log4j.appender.cosmosinjector5050.MaxFileSize=100MB
 log4j.appender.cosmosinjector5050.MaxBackupIndex=10
-log4j.appender.cosmosinjector5050.File=${flume.log.dir}/cosmos-injector.5050.log
+log4j.appender.cosmosinjector5050.File=${flume.log.dir}/cygnus.5050.log
 log4j.appender.cosmosinjector5050.layout=org.apache.log4j.PatternLayout
 log4j.appender.cosmosinjector5050.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss,SSS} %-5p [%t] (%C.%M:%L) %x - %m%n
 
