Add per-column attribute persistence

--- a/flume/conf/cygnus.conf.template
+++ b/flume/conf/cygnus.conf.template
@@ -58,17 +58,19 @@ cygnusagent.sinks.ckan-sink.dataset = mydataset
 # ============================================
 # OrionMySQLSink configuration
 # channel name from where to read notification events
-orionagent.sinks.mysql-sink.channel = mysql-channel
+cygnusagent.sinks.mysql-sink.channel = mysql-channel
 # sink class, must not be changed
-orionagent.sinks.mysql-sink.type = es.tid.fiware.fiwareconnectors.cygnus.sinks.OrionMySQLSink
+cygnusagent.sinks.mysql-sink.type = es.tid.fiware.fiwareconnectors.cygnus.sinks.OrionMySQLSink
 # the FQDN/IP address where the MySQL server runs
-orionagent.sinks.mysql-sink.mysql_host = x.y.z.w
+cygnusagent.sinks.mysql-sink.mysql_host = x.y.z.w
 # the port where the MySQL server listes for incomming connections
-orionagent.sinks.mysql-sink.mysql_port = 3306
+cygnusagent.sinks.mysql-sink.mysql_port = 3306
 # a valid user in the MySQL server
-orionagent.sinks.mysql-sink.mysql_username = root
+cygnusagent.sinks.mysql-sink.mysql_username = root
 # password for the user above
-orionagent.sinks.mysql-sink.mysql_password = xxxxxxxxxxxxx 
+cygnusagent.sinks.mysql-sink.mysql_password = xxxxxxxxxxxxx 
+# how the attributes are stored, either per row either per column (row, column)
+cygnusagent.sinks.mysql-sink.attr_persistence = column
 
 #=============================================
 # hdfs-channel configuration
