--- a/flume/pom.xml
+++ b/flume/pom.xml
@@ -48,6 +48,11 @@
       <version>1.1</version>
     </dependency>
     <dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>1.2.01</version>
+    </dependency>    
+    <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
