Add: New plugin dependence for cobertura in pom.xml

--- a/flume/pom.xml
+++ b/flume/pom.xml
@@ -102,6 +102,14 @@
             </descriptorRefs>
           </configuration>
         </plugin>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>cobertura-maven-plugin</artifactId>
+			<version>2.6</version>
+			<configuration>
+				<aggregate>true</aggregate>
+			</configuration>
+		</plugin>
       </plugins>
     </pluginManagement>
   </build>
