change the agent of cygnus in config file (bugfix)

--- a/flume/neore/rpm/SOURCES/config/flume.conf
+++ b/flume/neore/rpm/SOURCES/config/flume.conf
@@ -31,4 +31,4 @@ CONFIG_FOLDER=/usr/cygnus/conf
 CONFIG_FILE=/usr/cygnus/conf/cygnus.conf
 
 # Name of the agent
-AGENT_NAME=orionagent
+AGENT_NAME=cygnusagent
