--- a/flume/conf/log4j.properties.template
+++ b/flume/conf/log4j.properties.template
@@ -1,11 +1,11 @@
-# Copyright 2014 Telefonica InvestigaciÃ³n y Desarrollo, S.A.U
+# Copyright 2014 Telefónica Investigación y Desarrollo, S.A.U
 # 
 # This file is part of fiware-connectors (FI-WARE project).
 # 
-# cosmos-injector is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General
+# fiware-connectors is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General
 # Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any
 # later version.
-# cosmos-injector is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
+# fiware-connectors is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
 # warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more
 # details.
 # 
