--- a/flume/pom.xml
+++ b/flume/pom.xml
@@ -80,6 +80,12 @@
   </dependencies>
 
   <build>
+    <resources>
+      <resource>
+	<directory>src/main/resources</directory>
+	<filtering>true</filtering>
+      </resource>
+    </resources>
     <pluginManagement>
       <plugins>
         <!-- Explicit Java version declaration in needed in some systems in which Maven seems not
