--- a/flume/pom.xml
+++ b/flume/pom.xml
@@ -80,6 +80,7 @@
   </dependencies>
 
   <build>
+    <!-- reference: http://stackoverflow.com/questions/3697449/retrieve-version-from-maven-pom-xml-in-code -->
     <resources>
       <resource>
 	<directory>src/main/resources</directory>
