Document the new events_ttl parameter of OrionRestHandler

--- a/flume/conf/cygnus.conf.template
+++ b/flume/conf/cygnus.conf.template
@@ -39,6 +39,7 @@ cygnusagent.sources.http-source.handler = es.tid.fiware.fiwareconnectors.cygnus.
 cygnusagent.sources.http-source.handler.notification_target = /notify
 # Default organization (organization semantic depend on the persistence sink)
 cygnusagent.sources.http-source.handler.default_organization = org42
+cygnusagent.sources.http-source.handler.event_ttl = 10
 
 # ============================================
 # OrionHDFSSink configuration
