Add the timestamp Flume interceptor to the configuration template

--- a/flume/conf/cygnus.conf.template
+++ b/flume/conf/cygnus.conf.template
@@ -39,7 +39,12 @@ cygnusagent.sources.http-source.handler = es.tid.fiware.fiwareconnectors.cygnus.
 cygnusagent.sources.http-source.handler.notification_target = /notify
 # Default organization (organization semantic depend on the persistence sink)
 cygnusagent.sources.http-source.handler.default_organization = org42
+# Number of channel re-injection retries before a Flume event is definetely discarded
 cygnusagent.sources.http-source.handler.event_ttl = 10
+# Source interceptors, do not change
+cygnusagent.sources.http-source.interceptors = ts-interceptor
+# Interceptor type, do not change
+cygnusagent.sources.http-source.interceptors.ts-interceptor.type = timestamp
 
 # ============================================
 # OrionHDFSSink configuration
