--- a/flume/conf/cygnus.conf.template
+++ b/flume/conf/cygnus.conf.template
@@ -41,7 +41,7 @@ cygnusagent.sources.http-source.handler.notification_target = /notify
 cygnusagent.sources.http-source.handler.default_organization = org42
 # Number of channel re-injection retries before a Flume event is definitely discarded
 cygnusagent.sources.http-source.handler.event_ttl = 10
-# Management interface port (temporal location for this parameter)
+# Management interface port (FIXME: temporal location for this parameter)
 cygnusagent.sources.http-source.handler.management_port = 8081
 # Source interceptors, do not change
 cygnusagent.sources.http-source.interceptors = ts-interceptor
